Created a new senti_udf

--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,35 +189,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from textblob import TextBlob  #passing cleaned tweets and getting a sentiment score for each tweet\n",
-    "from textblob.sentiments import NaiveBayesAnalyzer\n",
-    "def senti_score_udf(input_str):\n",
-    "    PSanalysis = TextBlob(input_str)\n",
-    "    analysis = TextBlob(input_str,analyzer=NaiveBayesAnalyzer())\n",
-    "    polarity = PSanalysis.sentiment.polarity\n",
-    "    subjectivity = PSanalysis.sentiment.subjectivity\n",
-    "    classification = analysis.sentiment.classification\n",
-    "    p_pos = analysis.sentiment.p_pos\n",
-    "    p_neg = analysis.sentiment.p_neg\n",
-    "    return [polarity,subjectivity,classification,p_pos,p_neg] #subjectivity, polarity, p_neg, classification\n",
+    "# from textblob import TextBlob  #passing cleaned tweets and getting a sentiment score for each tweet\n",
+    "# from textblob.sentiments import NaiveBayesAnalyzer\n",
+    "# def senti_score_udf(input_str):\n",
+    "#     PSanalysis = TextBlob(input_str)\n",
+    "#     analysis = TextBlob(input_str,analyzer=NaiveBayesAnalyzer())\n",
+    "#     polarity = PSanalysis.sentiment.polarity\n",
+    "#     subjectivity = PSanalysis.sentiment.subjectivity\n",
+    "#     classification = analysis.sentiment.classification\n",
+    "#     p_pos = analysis.sentiment.p_pos\n",
+    "#     p_neg = analysis.sentiment.p_neg\n",
+    "#     return [polarity,subjectivity,classification,p_pos,p_neg] #subjectivity, polarity, p_neg, classification\n",
+    "# func_udf2 = udf(senti_score_udf, ArrayType(FloatType()))\n",
+    "# CleanDF = CleanDF.withColumn('polarity', func_udf2(CleanDF['CleanedTweets'])[0])\n",
+    "# CleanDF = CleanDF.withColumn('subj', func_udf2(CleanDF['CleanedTweets'])[1])\n",
+    "# CleanDF = CleanDF.withColumn('class', func_udf2(CleanDF['CleanedTweets'])[2])\n",
+    "# CleanDF = CleanDF.withColumn('p_pos', func_udf2(CleanDF['CleanedTweets'])[3])\n",
+    "# CleanDF = CleanDF.withColumn('p_neg', func_udf2(CleanDF['CleanedTweets'])[4])\n",
+    "# CleanDF.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+--------------------+-----+-----+-----+-------+\n",
+      "|            DateTime|               Tweet|       CleanedTweets|p_neg|p_neu|p_pos| p_comp|\n",
+      "+--------------------+--------------------+--------------------+-----+-----+-----+-------+\n",
+      "|Thu Nov 09 17:43:...|RT @Forbes: The F...|The Failure of Se...|0.204|0.617|0.179|-0.1027|\n",
+      "|Thu Nov 09 17:43:...|RT @mindstatex: L...|Lots of love from...|  0.0| 0.56| 0.44|  0.875|\n",
+      "|Thu Nov 09 17:43:...|RT @FernandoHuama...|Warning Built in ...| 0.13| 0.87|  0.0|  -0.34|\n",
+      "+--------------------+--------------------+--------------------+-----+-----+-----+-------+\n",
+      "only showing top 3 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "analyser = SentimentIntensityAnalyzer()\n",
+    "def senti_score_udf(sentence):\n",
+    "    snt = analyser.polarity_scores(sentence)\n",
+    "    return ([snt['neg'], snt['neu'], snt['pos'], snt['compound']])\n",
     "func_udf2 = udf(senti_score_udf, ArrayType(FloatType()))\n",
-    "CleanDF = CleanDF.withColumn('polarity', func_udf2(CleanDF['CleanedTweets'])[0])\n",
-    "CleanDF = CleanDF.withColumn('subj', func_udf2(CleanDF['CleanedTweets'])[1])\n",
-    "CleanDF = CleanDF.withColumn('class', func_udf2(CleanDF['CleanedTweets'])[2])\n",
-    "CleanDF = CleanDF.withColumn('p_pos', func_udf2(CleanDF['CleanedTweets'])[3])\n",
-    "CleanDF = CleanDF.withColumn('p_neg', func_udf2(CleanDF['CleanedTweets'])[4])\n",
+    "CleanDF = CleanDF.withColumn('p_neg', func_udf2(CleanDF['CleanedTweets'])[0])\n",
+    "CleanDF = CleanDF.withColumn('p_neu', func_udf2(CleanDF['CleanedTweets'])[1])\n",
+    "CleanDF = CleanDF.withColumn('p_pos', func_udf2(CleanDF['CleanedTweets'])[2])\n",
+    "CleanDF = CleanDF.withColumn('p_comp', func_udf2(CleanDF['CleanedTweets'])[3])\n",
     "CleanDF.show(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+--------------------+-----+-----+-----+-------+-------------------+-------------------+\n",
+      "|            DateTime|               Tweet|       CleanedTweets|p_neg|p_neu|p_pos| p_comp|         DateTime_c|    DateTime_casted|\n",
+      "+--------------------+--------------------+--------------------+-----+-----+-----+-------+-------------------+-------------------+\n",
+      "|Thu Nov 09 17:43:...|RT @Forbes: The F...|The Failure of Se...|0.204|0.617|0.179|-0.1027|2017-11-09 17:43:41|2017-11-09 17:43:41|\n",
+      "|Thu Nov 09 17:43:...|RT @mindstatex: L...|Lots of love from...|  0.0| 0.56| 0.44|  0.875|2017-11-09 17:43:40|2017-11-09 17:43:40|\n",
+      "|Thu Nov 09 17:43:...|RT @FernandoHuama...|Warning Built in ...| 0.13| 0.87|  0.0|  -0.34|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
+      "|Thu Nov 09 17:43:...|RT @LevelNetwork:...|Join our telegram...|  0.0|0.845|0.155|  0.296|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
+      "|Thu Nov 09 17:43:...|RT @realsheepwolf...|DIGAF FLOAT 16M T...|  0.0|  1.0|  0.0|    0.0|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
+      "+--------------------+--------------------+--------------------+-----+-----+-----+-------+-------------------+-------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def Tw_Time_format(stri):  #manipulating and casting the strings(DateTime) of tweets dataframe to timestamps\n",
     "    dic = {'Nov':'11','Oct':'10'}\n",
@@ -232,13 +285,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------------------+-----+-----+-----+-------+\n",
+      "|          Date_Time|      Cleaned_Tweets|p_neg|p_neu|p_pos| p_comp|\n",
+      "+-------------------+--------------------+-----+-----+-----+-------+\n",
+      "|2017-11-09 17:43:41|The Failure of Se...|0.204|0.617|0.179|-0.1027|\n",
+      "|2017-11-09 17:43:40|Lots of love from...|  0.0| 0.56| 0.44|  0.875|\n",
+      "|2017-11-09 17:43:39|Warning Built in ...| 0.13| 0.87|  0.0|  -0.34|\n",
+      "|2017-11-09 17:43:39|Join our telegram...|  0.0|0.845|0.155|  0.296|\n",
+      "|2017-11-09 17:43:39|DIGAF FLOAT 16M T...|  0.0|  1.0|  0.0|    0.0|\n",
+      "+-------------------+--------------------+-----+-----+-----+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "FinalTw = CleanDF.selectExpr(\"DateTime_casted as Date_Time\", \"CleanedTweets as Cleaned_Tweets\",\"polarity\",\"subj\",\"p_pos\",\"p_neg\")\n",
+    "FinalTw = CleanDF.selectExpr(\"DateTime_casted as Date_Time\", \"CleanedTweets as Cleaned_Tweets\", \"p_neg\",\"p_neu\",\"p_pos\",\"p_comp\")\n",
     "FinalTw.show(5) #selecting necessary columns"
    ]
   },
@@ -251,11 +320,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-------+------------------+\n",
+      "|     DateTime|  Price|  Cleaned_BTC_Time|\n",
+      "+-------------+-------+------------------+\n",
+      "|10/31/17 0:00|6142.46|2017-10-31 0:00:00|\n",
+      "|10/31/17 1:00|6139.47|2017-10-31 1:00:00|\n",
+      "|10/31/17 2:00| 6128.2|2017-10-31 2:00:00|\n",
+      "|10/31/17 3:00|6130.72|2017-10-31 3:00:00|\n",
+      "|10/31/17 4:00|6143.92|2017-10-31 4:00:00|\n",
+      "+-------------+-------+------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime \n",
     "from dateutil import parser\n",
@@ -272,11 +357,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+-------+\n",
+      "|          Date_Time|  Price|\n",
+      "+-------------------+-------+\n",
+      "|2017-10-31 00:00:00|6142.46|\n",
+      "|2017-10-31 01:00:00|6139.47|\n",
+      "|2017-10-31 02:00:00| 6128.2|\n",
+      "|2017-10-31 03:00:00|6130.72|\n",
+      "|2017-10-31 04:00:00|6143.92|\n",
+      "+-------------------+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "CleandfBtc = FullDataBtc.withColumn(\"Cleaned_BTC_Time_New\",FullDataBtc['Cleaned_BTC_Time'].cast(TimestampType()))\n",
     "FinalBtc = CleandfBtc.selectExpr(\"Cleaned_BTC_Time_New as Date_Time\", \"Price\")\n",
@@ -293,22 +394,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- Date_Time: timestamp (nullable = true)\n",
+      " |-- Cleaned_Tweets: string (nullable = true)\n",
+      " |-- p_neg: float (nullable = true)\n",
+      " |-- p_neu: float (nullable = true)\n",
+      " |-- p_pos: float (nullable = true)\n",
+      " |-- p_comp: float (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "FinalTw.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- Date_Time: timestamp (nullable = true)\n",
+      " |-- Price: double (nullable = true)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "216"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "FinalBtc.printSchema()\n",
     "FinalBtc.count()"
@@ -323,38 +456,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------------------+-----+-----+-----+-------+\n",
+      "|          Date_Time|      Cleaned_Tweets|p_neg|p_neu|p_pos| p_comp|\n",
+      "+-------------------+--------------------+-----+-----+-----+-------+\n",
+      "|2017-11-09 23:00:00|The Failure of Se...|0.204|0.617|0.179|-0.1027|\n",
+      "|2017-11-09 23:00:00|Lots of love from...|  0.0| 0.56| 0.44|  0.875|\n",
+      "|2017-11-09 23:00:00|Warning Built in ...| 0.13| 0.87|  0.0|  -0.34|\n",
+      "|2017-11-09 23:00:00|Join our telegram...|  0.0|0.845|0.155|  0.296|\n",
+      "|2017-11-09 23:00:00|DIGAF FLOAT 16M T...|  0.0|  1.0|  0.0|    0.0|\n",
+      "|2017-11-09 23:00:00|My luggage likes ...|  0.0|0.682|0.318| 0.4215|\n",
+      "|2017-11-09 23:00:00|As Bitcoin become...|  0.0|0.737|0.263| 0.6908|\n",
+      "|2017-11-09 23:00:00|A crucial feature...|0.147|0.622| 0.23|   0.25|\n",
+      "|2017-11-09 23:00:00|As Bitcoin become...|  0.0|0.737|0.263| 0.6908|\n",
+      "|2017-11-09 23:00:00|As Bitcoin become...|  0.0|0.737|0.263| 0.6908|\n",
+      "+-------------------+--------------------+-----+-----+-----+-------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dt_truncated = ((round(unix_timestamp(col('Date_Time')) / 3600) * 3600).cast('timestamp'))\n",
     "FinalTw = FinalTw.withColumn('dt_truncated', dt_truncated)\n",
-    "FinalTw = FinalTw.selectExpr(\"dt_truncated as Date_Time\",\"Cleaned_Tweets\",\"polarity\",\"subj\",\"p_pos\",\"p_neg\")\n",
+    "FinalTw = FinalTw.selectExpr(\"dt_truncated as Date_Time\",\"Cleaned_Tweets\",\"p_neg\",\"p_neu\",\"p_pos\",\"p_comp\")\n",
     "UTC = ((unix_timestamp(col('Date_Time'))+ 5*60*60).cast('timestamp'))\n",
     "FinalTw = FinalTw.withColumn('UTC', UTC)\n",
-    "FinalTw = FinalTw.selectExpr(\"UTC as Date_Time\",\"Cleaned_Tweets\",\"polarity\",\"subj\",\"p_pos\",\"p_neg\")\n",
+    "FinalTw = FinalTw.selectExpr(\"UTC as Date_Time\",\"Cleaned_Tweets\",\"p_neg\",\"p_neu\",\"p_pos\",\"p_comp\")\n",
     "FinalTw.show(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------------------+------------------+-------------------+-------------------+\n",
+      "|           DateTime|               P_Neg|             P_Neu|              P_Pos|             P_Comp|\n",
+      "+-------------------+--------------------+------------------+-------------------+-------------------+\n",
+      "|2017-11-09 09:00:00| 0.06335667706973194|0.8352667982150044|0.10138531352216676|0.09004301058852252|\n",
+      "|2017-11-04 14:00:00| 0.03432418703294655|0.8658907504456981|0.09775025408991378|0.13309100414459485|\n",
+      "|2017-11-04 13:00:00| 0.03428410707531515|0.8548171586355747|0.10807946539823222|0.14935158066577298|\n",
+      "|2017-11-02 12:00:00|0.042813335490398736|0.8689419621687333|0.08742419309260638|0.08272797465117913|\n",
+      "|2017-11-07 23:00:00| 0.03964359884031091| 0.870325951618513|0.08899031156951169| 0.0956868502524098|\n",
+      "+-------------------+--------------------+------------------+-------------------+-------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "FinalTw.registerTempTable(\"temp\")\n",
-    "FinalTw_avg = sql.sql(\"SELECT Date_Time As DateTime,AVG(polarity) as Polarity,AVG(subj) as Subj,AVG(p_pos) as P_Pos,AVG(p_neg) as P_Neg FROM temp GROUP BY Date_Time\")\n",
+    "FinalTw_avg = sql.sql(\"SELECT Date_Time As DateTime,AVG(p_neg) as P_Neg,AVG(p_neu) as P_Neu,AVG(p_pos) as P_Pos,AVG(p_comp) as P_Comp FROM temp GROUP BY Date_Time\")\n",
     "#FinalTw_avg = FinalTw.select(\"Date_Time\",\"polarity\",\"subj\",\"p_pos\",\"p_neg\").groupBy(\"Date_Time\").agg(avg(col(\"polarity\",\"subj\",\"p_pos\",\"p_neg\")))\n",
     "FinalTw_avg.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -389,33 +559,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------------------+------------------+-------------------+-------------------+-------+\n",
+      "|           DateTime|               P_Neg|             P_Neu|              P_Pos|             P_Comp|  Price|\n",
+      "+-------------------+--------------------+------------------+-------------------+-------------------+-------+\n",
+      "|2017-10-31 05:00:00|0.032105337127289746|0.8886994383810611|0.07639044936055715| 0.0952825835654826|6158.76|\n",
+      "|2017-10-31 06:00:00|   0.035658141252999|0.8620461637592286|0.10166999386740862| 0.1308074225757285| 6105.9|\n",
+      "|2017-10-31 07:00:00|0.034355602204467824|0.8648392492043283|0.09941266549954667|0.13034286621825805|6094.36|\n",
+      "|2017-10-31 08:00:00| 0.03620235318865846|0.8790611768294784|0.08473647064145874|0.11057558745803202|6125.13|\n",
+      "|2017-10-31 09:00:00| 0.04383754972923398|0.8627526715791514|0.09285047769069069|0.10886076371645646| 6165.0|\n",
+      "+-------------------+--------------------+------------------+-------------------+-------------------+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "FinalTw_avg.registerTempTable(\"avgs\")\n",
     "FinalBtc.registerTempTable(\"prices\")\n",
-    "results = sql.sql(\"SELECT DateTime,Polarity,Subj,P_Pos,P_Neg,Price FROM avgs JOIN prices ON avgs.DateTime = prices.Date_Time order by avgs.DateTime\")\n",
+    "results = sql.sql(\"SELECT DateTime, P_Neg, P_Neu, P_Pos, P_Comp, Price FROM avgs JOIN prices ON avgs.DateTime = prices.Date_Time order by avgs.DateTime\")\n",
     "#results = results.selectExpr(\"DateTime\",\"avg(polarity)\",\"avg(subj)\",\"avg(p_pos)\",\"avg(p_neg)\",\"Price\")\n",
     "results.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "211"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
