--- a/LSTM_TimeSeries.ipynb
+++ b/LSTM_TimeSeries.ipynb
@@ -7053,6 +7053,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sol.to_csv('Predictions.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
