--- a/Random_Forest_Regression.ipynb
+++ b/Random_Forest_Regression.ipynb
@@ -1104,51 +1104,7 @@
     "# d = c.map(lambda line: LabeledPoint(line[0],[line[1:]])) # arbitrary mapping, it's just an example\n",
     "# print (d.take(3))\n",
     "\n",
-    "# MLUtils.saveAsLibSVMFile(d,\"/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/libsvm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# # Load and parse the data file, converting it to a DataFrame.\n",
-    "# data = sql.read.format(\"libsvm\").load(\"/Users/harishpuvvada/Desktop/PBDA/IPynbSpark/someone.txt\",multiclass = True)\n",
-    "\n",
-    "\n",
-    "# # Automatically identify categorical features, and index them.\n",
-    "# # Set maxCategories so features with > 4 distinct values are treated as continuous.\n",
-    "# #featureIndexer = VectorIndexer(inputCol=\"features\", outputCol=\"indexedFeatures\", maxCategories=4).fit(reframed)\n",
-    "\n",
-    "# # # Split the data into training and test sets (30% held out for testing)\n",
-    "# # (trainingData, testData) = data.randomSplit([0.7, 0.3])\n",
-    "\n",
-    "# # # Train a RandomForest model.\n",
-    "# # rf = RandomForestRegressor(featuresCol=\"indexedFeatures\")\n",
-    "\n",
-    "# # # Chain indexer and forest in a Pipeline\n",
-    "# # pipeline = Pipeline(stages=[featureIndexer, rf])\n",
-    "\n",
-    "# # # Train model.  This also runs the indexer.\n",
-    "# # model = pipeline.fit(trainingData)\n",
-    "\n",
-    "# # # Make predictions.\n",
-    "# # predictions = model.transform(testData)\n",
-    "\n",
-    "# # # Select example rows to display.\n",
-    "# # predictions.select(\"prediction\", \"label\", \"features\").show(5)\n",
-    "\n",
-    "# # # Select (prediction, true label) and compute test error\n",
-    "# # evaluator = RegressionEvaluator(\n",
-    "# #     labelCol=\"label\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
-    "# # rmse = evaluator.evaluate(predictions)\n",
-    "# # print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)\n",
-    "\n",
-    "# # rfModel = model.stages[1]\n",
-    "# # print(rfModel)  # summary only"
+    "# MLUtils.saveAsLibSVMFile(d,\"/Users/harishpuvvada/Desktop/PBDA/IPynbSpark/libsvm\")"
    ]
   },
   {
